crates/python_parser/src/snapshots/python_parser__string__tests__fstring_escaped_character.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..8,
            value: FString(
                FStringExpr {
                    range: 0..8,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..8,
                                    elements: [
                                        Literal(
                                            FStringLiteralElement {
                                                range: 2..4,
                                                value: "\\",
                                            },
                                        ),
                                        Expression(
                                            FStringExpressionElement {
                                                range: 4..7,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 5..6,
                                                        id: "x",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
