crates/python_parser/src/snapshots/python_parser__string__tests__fstring_parse_self_documenting_format.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..14,
            value: FString(
                FStringExpr {
                    range: 0..14,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..14,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..13,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 3..7,
                                                        id: "user",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: Some(
                                                    DebugText {
                                                        leading: "",
                                                        trailing: "=",
                                                    },
                                                ),
                                                conversion: None,
                                                format_spec: Some(
                                                    FStringFormatSpec {
                                                        range: 9..12,
                                                        elements: [
                                                            Literal(
                                                                FStringLiteralElement {
                                                                    range: 9..12,
                                                                    value: ">10",
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
