crates/python_parser/src/snapshots/python_parser__string__tests__invalid_byte_literal_error.snap
---
source: crates/python_parser/src/string.rs
expression: error
---
ParseError {
    error: Lexical(
        InvalidByteLiteral,
    ),
    location: 6..10,
}
