crates/python_parser/src/snapshots/python_parser__string__tests__invalid_unicode_literal.snap
---
source: crates/python_parser/src/string.rs
expression: error
---
ParseError {
    error: Lexical(
        UnicodeError,
    ),
    location: 4..6,
}
